# ebm_tool_designer

./: .gitignore  README.md  memory.md  plan.md  pyproject.toml  requirements.txt
dynamic-planning/2.1_simple_agent/simulation/: log_.npz
dynamic-planning/2.2_tracking_objects/simulation/: log_.npz
dynamic-planning/2.3_object_affordances/simulation/: log_.npz
dynamic-planning/3.1_intrinsic_extrinsic/: config.py
dynamic-planning/3.1_intrinsic_extrinsic/environment/: log.py
dynamic-planning/3.1_intrinsic_extrinsic/simulation/: log_.npz
dynamic-planning/3.2_deep_hierarchies/simulation/: log_.npz
dynamic-planning/4.2_dynamic_planning/simulation/: log_.npz
dynamic-planning/4.3_flexible_hierarchies/: config.py  main.py
dynamic-planning/4.3_flexible_hierarchies/simulation/: log_.npz
simulation/: log_.npz
src/ebm_tool_designer/: config.py  ebm.py  reward_model.py  sample_tools_EBM.py  tool_dataset.py  tool_design_prior.py  train_offline.py
src/ebm_tool_designer/data/: dummy_dataset.parquet
src/ebm_tool_designer/helpers/: plots.py
src/ebm_tool_designer/scratchpad/: check_tau_phi_energy_optimisation.py  sampling_end_effector_points.py  tau_phi_transformations.py
src/ebm_tool_designer/weights/: reward_model_best.pt
tests/: sample_tools_EBM.py  test_reward_model.py
